Fix attach jvm above jdk8